# ai_agent_math_assistant

./: README.md  problem.txt  pyproject.toml  report.md
src/math_assistant/: crew.py  main.py
src/math_assistant/config/: agents.yaml  tasks.yaml
