[project]
name = "math_assistant"
version = "0.1.0"
description = "math-assistant using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.102.0,<1.0.0"
]

[project.scripts]
math_assistant = "math_assistant.main:run"
run_crew = "math_assistant.main:run"
train = "math_assistant.main:train"
replay = "math_assistant.main:replay"
test = "math_assistant.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
